# kris

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json  statusline-command.sh
crates/kris-agent/: Cargo.toml
crates/kris-agent/src/: agent.rs  client.rs  lib.rs  message.rs
crates/kris-cli/: Cargo.toml
crates/kris-cli/src/: agent_runner.rs  app.rs  banner.rs  command.rs  context.rs  main.rs  registry.rs  repl.rs  shell.rs  style.rs
crates/kris-cli/src/commands/: ask.rs  cat.rs  clear.rs  config.rs  exit.rs  find.rs  fix.rs  health.rs  help.rs  ls.rs  mod.rs  model.rs  pwd.rs  reset.rs  serve.rs  tree.rs  version.rs  workspace.rs
crates/kris-core/: Cargo.toml
crates/kris-core/src/: home.rs  lib.rs  project.rs  session.rs  settings.rs
crates/kris-core/src/workspace/: discover.rs  finder.rs  mod.rs
crates/kris-tools/: Cargo.toml
crates/kris-tools/src/: error.rs  lib.rs
crates/kris-tools/src/file/: cat.rs  find.rs  list.rs  mod.rs  read.rs  tree.rs  write.rs
crates/kris-tools/src/tool/: builtin.rs  mod.rs  registry.rs  trait.rs
scripts/: setup-termux.sh
src/: agent.rs  client.rs  config.rs  diff.rs  export.rs  kris_md.rs  lib.rs  main.rs  message.rs  picker.rs  repl.rs  server.rs  session_store.rs  style.rs  term.rs
src/tools/: ask.rs  edit.rs  fs.rs  git.rs  mod.rs  outline.rs  run_command.rs
tests/: agent_integration.rs
