[workspace]
resolver = "2"

members = [
    "crates/kris-cli",
    "crates/kris-agent",
    "crates/kris-tools",
    "crates/kris-core",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Elvano Inferno"]

[workspace.dependencies]

# Error Handling
anyhow = "1"
thiserror = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# HTTP client (talks to a local llama.cpp `llama-server` instance)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Filesystem
walkdir = "2"
ignore = "0.4"

# Text Processing
regex = "1"

[profile.release]
# Smaller binary for storage-constrained phones. Deliberately not adding
# lto/codegen-units=1: those trade build-time memory for runtime perf, and
# this dependency tree has already been observed to OOM the compiler on
# Termux even in debug builds - not worth risking release builds failing
# on the same hardware for a marginal runtime gain.
strip = true