[package]
name = "kris-agent"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
kris-tools = { path = "../kris-tools" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
