[package]
name = "kris-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
kris-core = { path = "../kris-core" }
kris-tools = { path = "../kris-tools" }
kris-agent = { path = "../kris-agent" }

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true