[package]
name = "kris-tools"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kris-core = { path = "../kris-core" }

anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
serde_json.workspace = true
regex.workspace = true
ignore.workspace = true